tests/fail/stable/invalid_custom_regex.stderr
error: regex parse error:
           ab(ab
             ^
       error: unclosed group

       In custom Regex format option:
       At "   {:/ab(ab/}   "
                ^^^^^^^
 --> tests/fail/stable/invalid_custom_regex.rs:2:24
  |
2 |     sscanf::scanf!("", "   {:/ab(ab/}   ", String).unwrap();
  |                        ^^^^^^^^^^^^^^^^^^
